Link to show project page

--- a/projects/templates/base.html
+++ b/projects/templates/base.html
@@ -74,7 +74,7 @@
         <div class="col-md-4">
           <h2>{{ project.title }}</h2>
           <p>{{ project.about }}</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-default" href="{% url 'projects:show' project.id %}" role="button">View details &raquo;</a></p>
         </div>
         {% endfor %}
       </div>
