Make login/logout work in nav bar.

--- a/templates/base.html
+++ b/templates/base.html
@@ -45,8 +45,13 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
         	<ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Sign Up</a></li>
-            <li><a href="#">Login</a></li>
+                {% if user.is_authenticated %}
+                <li class="navbar-text">{{ user }}</li>
+                <li><a href="{% url 'logout' %}">Logout</a></li>
+                {% else %}
+                <li><a href="#">Sign Up</a></li>
+                <li><a href="{% url 'login' %}">Login</a></li>
+                {% endif %}
           </ul>
         </div><!--/.navbar-collapse -->
       </div>
