--- a/nokecodes/templates/base.html
+++ b/nokecodes/templates/base.html
@@ -51,7 +51,7 @@
                 <li><a href="{% url 'logout' %}">Logout</a></li>
                 {% else %}
                 <li><a href="#">Sign Up</a></li>
-                <li><a href="{% url 'login' %}">Login</a></li>
+                <li><a href="{% url 'login' %}?next={{ request.path }}">Login</a></li>
                 {% endif %}
           </ul>
         </div><!--/.navbar-collapse -->
