--- a/nokecodes/templates/base.html
+++ b/nokecodes/templates/base.html
@@ -1,28 +1,20 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
-  	{% load staticfiles %}
-    <title>Noke Codes</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
+    <meta name="description" content="Noke Codes - Roanoke, VA">
 
-    <title>Jumbotron Template for Bootstrap</title>
+    <title>Noke Codes</title>
 
     <!-- Bootstrap core CSS -->
-        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
 
-<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="jumbotron.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -45,14 +37,14 @@
           <a class="navbar-brand" href="{% url 'home' %}"><img src="https://static.wixstatic.com/media/9f780f_ba3e120d3c854334a2d94eb3a684a3ba.png/v1/fill/w_1200,h_532,al_c,usm_0.66_1.00_0.01/9f780f_ba3e120d3c854334a2d94eb3a684a3ba.png" style="height: 100%;"/></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-        	<ul class="nav navbar-nav navbar-right">
-                {% if user.is_authenticated %}
-                <li class="navbar-text">{{ user }}</li>
-                <li><a href="{% url 'logout' %}">Logout</a></li>
-                {% else %}
-                <li><a href="#">Sign Up</a></li>
-                <li><a href="{% url 'login' %}?next={{ request.path }}">Login</a></li>
-                {% endif %}
+          <ul class="nav navbar-nav navbar-right">
+            {% if user.is_authenticated %}
+            <li class="navbar-text">{{ user }}</li>
+            <li><a href="{% url 'logout' %}">Logout</a></li>
+            {% else %}
+            <li><a href="#">Sign Up</a></li>
+            <li><a href="{% url 'login' %}?next={{ request.path }}">Login</a></li>
+            {% endif %}
           </ul>
         </div><!--/.navbar-collapse -->
       </div>
@@ -61,11 +53,7 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        {% block jumbotron %}
-
-        <h1>Noke Platform</h1>
-        <p>Explore projects from Noke Codes</p>
-        {% endblock %}
+        {% block jumbotron %}{% endblock %}
       </div>
     </div>
 
@@ -76,22 +64,6 @@
       </div>
     </div>
     <div class="container">
-      <!-- Example row of columns -->
-      <div class="row">
-          {% for project in projs %}
-
-        <div class="col-md-3">
-          <a class="project-link" href="{% url 'projects:details' project.slug %}">
-            <div class="project-card">
-              <h3>{{ project.title }}</h3>
-              <hr/>
-              <p>{{ project.about|truncatechars:76 }}</p>            
-            </div>
-          </a>
-        </div>
-        {% endfor %}
-      </div>
-
       <hr>
 
       <footer>
@@ -104,8 +76,6 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
   </body>
 </html>
