Add user profiles and edit capabilities.

--- a/nokecodes/templates/registration/login.html
+++ b/nokecodes/templates/registration/login.html
@@ -1,38 +1,25 @@
 {% extends "base.html" %}
 
+{% load bootstrap3 %}
+
+{% block jumbotron %}
+  <h1>Login</h1>
+  {% if next %}
+    <p>Please login to see this page</p>
+  {% endif %}
+{%  endblock %}
+
 {% block body %}
+  <div class="col-sm-5">
+    <form method="post">
+      {% csrf_token %}
+      {% bootstrap_form form %}
+      <input type="hidden" name="next" value="{{ next }}" />
+      {% buttons submit='Login' %}{% endbuttons %}
+    </form>
+  </div>
 
-{% if form.errors %}
-<p class="alert alert-danger">Your username and password didn't match. Please try again.</p>
-{% endif %}
-
-{% if next %}
-    {% if user.is_authenticated %}
-    <p>Your account doesn't have access to this page. To proceed,
-    please login with an account that has access.</p>
-    {% else %}
-    <p>Please login to see this page.</p>
-    {% endif %}
-{% endif %}
-
-<form method="post" action="{% url 'login' %}">
-{% csrf_token %}
-<table>
-<tr>
-    <td>{{ form.username.label_tag }}</td>
-    <td>{{ form.username }}</td>
-</tr>
-<tr>
-    <td>{{ form.password.label_tag }}</td>
-    <td>{{ form.password }}</td>
-</tr>
-</table>
-
-<input class="btn btn-primary" type="submit" value="login" />
-<input type="hidden" name="next" value="{{ next }}" />
-</form>
-
-{# Assumes you setup the password_reset view in your URLconf #}
-{# <p><a href="{% url 'password_reset' %}">Lost password?</a></p> #}
+  {# Assumes you setup the password_reset view in your URLconf #}
+  {# <p><a href="{% url 'password_reset' %}">Lost password?</a></p> #}
 
 {% endblock %}
