--- a/nokecodes/templates/base.html
+++ b/nokecodes/templates/base.html
@@ -1,4 +1,5 @@
 {% load staticfiles %}
+{% load bootstrap3 %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -39,7 +40,7 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             {% if user.is_authenticated %}
-            <li class="navbar-text">{{ user }}</li>
+            <li><a href="{% url 'users:profile' user %}">{% bootstrap_icon 'user' %} {{ user.profile.display_name }}</a></li>
             <li><a href="{% url 'logout' %}">Logout</a></li>
             {% else %}
             <li><a href="#">Sign Up</a></li>
