--- a/users/templates/users/users_list.html
+++ b/users/templates/users/users_list.html
@@ -2,7 +2,7 @@
 
 {% block jumbotron %}
     <h1>Noke Platform</h1>
-    <p>Meet our users!</p>
+    <p>See who's involved</p>
 {% endblock %}
 
 {% block body %}
