--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% load bootstrap3 %}
+{% load markdown_deux_tags %}
 
 {% block jumbotron %}
   <h1>{{ user.get_full_name|default:user }}</h1>
@@ -14,6 +15,6 @@
   <p><a href="{% url 'users:edit_profile' user.username %}">{% bootstrap_icon 'pencil' %} Edit</a></p>
   {% endif %}
   <h2>About</h2>
-  <p>{{ user.profile.bio }}</p>
+  <p>{{ user.profile.bio|markdown }}</p>
   <p><a href="{{ user.profile.website }}">{{ user.profile.website }}</a></p>
 {% endblock %}
