--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -12,7 +12,7 @@
 
 {% block body %}
   {% if request.user == user %}
-  <p><a href="{% url 'users:edit_profile' user.username %}">{% bootstrap_icon 'pencil' %} Edit</a></p>
+  <p><a href="{% url 'users:edit_profile' user.get_username %}">{% bootstrap_icon 'pencil' %} Edit</a></p>
   {% endif %}
   <h2>About</h2>
   <p>{{ user.profile.bio|markdown }}</p>
