--- a/users/templates/users/users_list.html
+++ b/users/templates/users/users_list.html
@@ -8,9 +8,9 @@
 {% block body %}
     {% for user in users %}
     <div class="col-md-3">
-        <a class="project-link" href="{% url 'users:profile' user.username %}">
+        <a class="project-link" href="{% url 'users:profile' user.get_username %}">
             <div class="project-card">
-                <h3>{{ user.username }}</h3>
+                <h3>{{ user.get_username }}</h3>
                 <hr/>
                 <p>{{ user.get_full_name }}</p>
                 <p>{{ user.profile.organization }}</p>
