--- a/nokecodes/templates/base.html
+++ b/nokecodes/templates/base.html
@@ -26,7 +26,7 @@
 
   <body>
 
-    <nav class="navbar navbar-inverse">
+    <nav class="navbar ">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
