--- a/nokecodes/static/css/style.css
+++ b/nokecodes/static/css/style.css
@@ -87,4 +87,29 @@ color: #fff;
 
 
 
+.org 
+{
+    //bottom: -75px;
+    //left: 10px;
+    //position: absolute;
+    transition: bottom .3s;
+    z-index: 3;
+}
+.org-inner
+{
+    background: #fff;
+    border: 3px solid #fff;
+    border-radius: 6px;//
+    box-shadow: 0 1px 1px rgba(136,153,166,0.15);
+    //height: 200px;
+    position: relative;
+    //width: 200px;
+    min-width: 150px;
+}
+.org-img
+{
+    max-width: 100%;
+    max-height: 200px;
+}
+
 
